<resources>
    <string name="app_name">MobileSW</string>
    <string name="write_your_comment">write_your_comment</string>
    <string name="update_post">update_post</string>
    <string name="post_image">post_image</string>
    <string name="username">UserName</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="description_to_the_post">Description to the post</string>
    <string name="user_pict">TODO</string>
    <string name="gallery_after_reading">Gallery_after_reading</string>
    <string name="press_to_upload_post">press_to_upload_post</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="post_description">Post description</string>
    <string name="select_image">string_image</string>
    <string name="delete_post_btn">DELETE POST</string>
    <string name="edit_post_btn">Edit</string>
</resources>