<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="316dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/blog_user_image"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blog_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/blog_user_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/blog_post_date"
                app:layout_constraintStart_toEndOf="@+id/blog_user_image"
                app:layout_constraintTop_toBottomOf="@+id/blog_user_name" />

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="0dp"
                android:layout_height="209dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/user_pict"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_user_image"
                app:layout_constraintVertical_bias="0.009"
                app:srcCompat="@drawable/select_image" />

            <TextView
                android:id="@+id/blog_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description_to_the_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog_image" />

            <Button
                android:id="@+id/blog_delete_btn"
                android:layout_width="99dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/delete_post_btn"

                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/blog_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>